Add index.html and style.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="member-card">
       <h2>ねこあじ</h2>
-      <p>一番最初にモデレーター。人生初のモデレーター頑張ります。</p>
+      <p>一番最初にモデレーターになった人。人生初のモデレーター頑張ります。</p>
       <img src="https://cdn.discordapp.com/avatars/1154650067962171450/bf4519a314fd5dc325f88ff0c161c553.png?size=1024" alt="ねこあじのアイコン">    </div>
 
 <div class="member-card">
