Add index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <h1>そよ風カンパニー メンバー紹介</h1>
     <nav>
-      <a href="../sykz-hub/index.html">ホームへ戻る</a>
+      <a href="https://soyosoft-dev.github.io/hub/">ホームへ戻る</a>
     </nav>
   </header>
 
