Add index.html and style.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="member-card">
     <h2>ЯØusØku</h2>
     <p>創設者。script.js勉強中です。</p>
-    <a href="https://soyosoft-dev.github.io/hub-member-rousoku/">
+    <a href="https://soyosoft-dev.github.io/team.member.rousoku/">
       <img src="https://cdn.discordapp.com/avatars/1469268732328280230/675c73ef9e27d896c09cad000e137e6d.png?size=1024" alt="Rousokuのアイコン" class="profile-icon">
     </a>
   </div>
